# docs/swagger.yaml
@@ -1,148 +1,57 @@
 definitions:
   document.EsProduct:
     properties:
-      album_pics:
-        description: 是否可空:YES 画册图片，连产品图片限制为5张，以逗号分割
-        type: string
       attrValueList:
         items:
           $ref: '#/definitions/domain.EsProductAttributeValue'
         type: array
-      brand_id:
-        description: 是否可空:YES
+      brandId:
         type: integer
-      brand_name:
-        description: 是否可空:YES 品牌名称
+      brandName:
         type: string
-      delete_status:
-        description: 是否可空:YES 删除状态：0->未删除；1->已删除
-        type: integer
-      description:
-        description: 是否可空:YES 商品描述
-        type: string
-      detail_desc:
-        description: 是否可空:YES
-        type: string
-      detail_html:
-        description: 是否可空:YES 产品详情网页内容
-        type: string
-      detail_mobile_html:
-        description: 是否可空:YES 移动端网页详情
-        type: string
-      detail_title:
-        description: 是否可空:YES
-        type: string
-      feight_template_id:
-        description: 是否可空:YES
-        type: integer
-      gift_growth:
-        description: 是否可空:YES 赠送的成长值
-        type: integer
-      gift_point:
-        description: 是否可空:YES 赠送的积分
-        type: integer
       id:
-        description: 是否可空:NO
+        description: model.PmsProduct
         type: integer
       keywords:
-        description: 是否可空:YES
         type: string
-      low_stock:
-        description: 是否可空:YES 库存预警值
-        type: integer
       name:
-        description: 是否可空:NO
         type: string
-      new_status:
-        description: 是否可空:YES 新品状态:0->不是新品；1->新品
+      newStatus:
         type: integer
-      note:
-        description: 是否可空:YES
-        type: string
-      original_price:
-        description: 是否可空:YES 市场价
-        type: number
       pic:
-        description: 是否可空:YES
         type: string
-      preview_status:
-        description: 是否可空:YES 是否为预告商品：0->不是；1->是
-        type: integer
       price:
-        description: 是否可空:YES
         type: number
-      product_attribute_category_id:
-        description: 是否可空:YES
+      productCategoryId:
         type: integer
-      product_category_id:
-        description: 是否可空:YES
-        type: integer
-      product_category_name:
-        description: 是否可空:YES 商品分类名称
+      productCategoryName:
         type: string
-      product_sn:
-        description: 是否可空:NO 货号
+      productSn:
         type: string
-      promotion_end_time:
-        description: 是否可空:YES 促销结束时间
-        type: string
-      promotion_per_limit:
-        description: 是否可空:YES 活动限购数量
+      promotionType:
         type: integer
-      promotion_price:
-        description: 是否可空:YES 促销价格
-        type: number
-      promotion_start_time:
-        description: 是否可空:YES 促销开始时间
-        type: string
-      promotion_type:
-        description: 是否可空:YES 促销类型：0->没有促销使用原价;1->使用促销价；2->使用会员价；3->使用阶梯价格；4->使用满减价格；5->限时购
-        type: integer
-      publish_status:
-        description: 是否可空:YES 上架状态：0->下架；1->上架
-        type: integer
-      recommand_status:
-        description: 是否可空:YES 推荐状态；0->不推荐；1->推荐
+      recommandStatus:
         type: integer
       sale:
-        description: 是否可空:YES 销量
         type: integer
-      service_ids:
-        description: 是否可空:YES 以逗号分割的产品服务：1->无忧退货；2->快速退款；3->免费包邮
-        type: string
       sort:
-        description: 是否可空:YES 排序
         type: integer
       stock:
-        description: 是否可空:YES 库存
         type: integer
-      sub_title:
-        description: 是否可空:YES 副标题
+      subTitle:
         type: string
-      unit:
-        description: 是否可空:YES 单位
-        type: string
-      use_point_limit:
-        description: 是否可空:YES 限制使用的积分数
-        type: integer
-      verify_status:
-        description: 是否可空:YES 审核状态：0->未审核；1->审核通过
-        type: integer
-      weight:
-        description: 是否可空:YES 商品重量，默认为克
-        type: number
     type: object
   domain.EsProductAttributeValue:
     properties:
-      attr_id:
+      id:
         type: integer
-      attr_name:
+      name:
         type: string
-      attr_product_attribute_id:
+      productAttributeId:
         type: integer
-      attr_type:
-        type: string
-      attr_value:
+      type:
+        type: integer
+      value:
         type: string
     type: object
   domain.EsProductRelatedInfo:
@@ -326,11 +235,13 @@ paths:
       description: 获取品牌列表
       operationId: v1/PmsBrandController/list
       parameters:
-      - description: page number
+      - default: 0
+        description: page number
         in: query
         name: pageNum
         type: integer
-      - description: page size
+      - default: 3
+        description: page size
         in: query
         name: pageSize
         type: integer
@@ -390,7 +301,7 @@ paths:
       summary: 更新品牌
       tags:
       - 品牌接口
-  /create/{id}:
+  /esProduct/create/{id}:
     post:
       consumes:
       - application/json
@@ -421,7 +332,7 @@ paths:
       summary: 根据id创建商品
       tags:
       - 搜索商品管理
-  /delete/{id}:
+  /esProduct/delete/{id}:
     get:
       consumes:
       - application/json
@@ -447,7 +358,7 @@ paths:
       summary: 根据id删除商品
       tags:
       - 搜索商品管理
-  /delete/batch:
+  /esProduct/delete/batch:
     post:
       consumes:
       - application/json
@@ -481,7 +392,7 @@ paths:
       tags:
       - 搜索商品管理
   /esProduct/importAll:
-    get:
+    post:
       consumes:
       - application/json
       description: 导入所有数据库中商品到ES
@@ -500,7 +411,7 @@ paths:
       summary: 导入所有数据库中商品到ES
       tags:
       - 搜索商品管理
-  /recommend/{id}:
+  /esProduct/recommend/{id}:
     get:
       consumes:
       - application/json
@@ -509,14 +420,16 @@ paths:
       parameters:
       - description: brandId
         in: path
-        name: brandId
+        name: id
         required: true
         type: integer
-      - description: page number
+      - default: 0
+        description: page number
         in: query
         name: pageNum
         type: integer
-      - description: page size
+      - default: 5
+        description: page size
         in: query
         name: pageSize
         type: integer
@@ -528,13 +441,13 @@ paths:
           schema:
             $ref: '#/definitions/response.ResponseMsg'
         "500":
-          description: failure
+          description: default
           schema:
             $ref: '#/definitions/response.ResponseMsg'
       summary: 根据商品id推荐商品
       tags:
       - 搜索商品管理
-  /search:
+  /esProduct/search:
     get:
       consumes:
       - application/json
@@ -545,19 +458,23 @@ paths:
         in: query
         name: keyword
         type: string
-      - description: brandId
+      - default: 0
+        description: brandId
         in: query
         name: brandId
         type: integer
-      - description: page number
+      - default: 0
+        description: product Category Id
         in: query
         name: productCategoryId
         type: integer
-      - description: page number
+      - default: 0
+        description: page number
         in: query
         name: pageNum
         type: integer
-      - description: page size
+      - default: 5
+        description: page size
         in: query
         name: pageSize
         type: integer
@@ -579,7 +496,7 @@ paths:
       summary: 综合搜索、筛选、排序
       tags:
       - 搜索商品管理
-  /search/relate:
+  /esProduct/search/relate:
     get:
       consumes:
       - application/json
@@ -609,22 +526,25 @@ paths:
       summary: 获取搜索的相关品牌、分类及筛选属性
       tags:
       - 搜索商品管理
-  /search/simple:
+  /esProduct/search/simple:
     get:
       consumes:
       - application/json
       description: 简单搜索
       operationId: v1/esProduct/SearchSimple
       parameters:
-      - description: page number
+      - default: '""'
+        description: page number
         in: query
         name: keyword
         type: string
-      - description: page number
+      - default: 0
+        description: page number
         in: query
         name: pageNum
         type: integer
-      - description: page size
+      - default: 5
+        description: page size
         in: query
         name: pageSize
         type: integer
